add suggested hinters
